--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,44 @@
 {
   "name": "ZenBreak",
   "short_name": "ZenBreak",
-  "description": "Profitez d'un moment de relaxation loin du monde numérique.",
-  "start_url": "/",
+  "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#2e3b4e",
-  "theme_color": "#4CAF50",
+  "background_color": "#e0f7fa",
+  "theme_color": "#0288d1",
   "icons": [
     {
       "src": "logo.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "logo.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "logo.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "logo.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "logo.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "logo.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "logo.png",
+      "sizes": "384x384",
       "type": "image/png"
     },
     {
